--- a/skin/frontend/waterlee-boilerplate/default/package.json
+++ b/skin/frontend/waterlee-boilerplate/default/package.json
@@ -1,15 +1,15 @@
 {
   "devDependencies": {
-    "gulp": "~3.8.10",
-    "gulp-sass": "~1.3.2",
-    "gulp-minify-css": "~0.4.2",
-    "gulp-concat": "~2.4.3",
-    "gulp-uglify": "~1.1.0",
-    "gulp-sourcemaps": "~1.3.0",
+    "gulp": "~3.8.11",
+    "gulp-sass": "~2.0.0",
+    "gulp-minify-css": "~1.1.1",
+    "gulp-concat": "~2.5.2",
+    "gulp-uglify": "~1.2.0",
+    "gulp-sourcemaps": "~1.5.2",
     "gulp-if": "~1.2.5",
     "gulp-rimraf": "~0.1.1",
-    "browser-sync": "~1.9.1",
-    "gulp-imagemin": "~2.1.0",
-    "imagemin-pngcrush": "~4.0.0"
+    "browser-sync": "^2.7.1",
+    "gulp-imagemin": "~2.2.1",
+    "imagemin-pngcrush": "~4.1.0"
   }
 }
